# C-Primer

./: .gitignore  README.md
Chapter 1/: README.md  Sales_item.h  data.txt  main  main.cpp  result
Chapter 2/: Chapter 2.md  main  main.cpp
Chapter 3/: Chapter 3.md
Project/Section3/: CMakeLists.txt  main  makefile
Project/Section3/src/: CMakeLists.txt  main.cpp
