SET(SRC_PATH "${PROJECT_SOURCE_DIR}/src")
MESSAGE(STATUS "PROJECT_SOURCE_DIR " ${PROJECT_SOURCE_DIR})

FILE(GLOB SRC_HEADER_LIST ${SRC_PATH}/*.h)
FILE(GLOB SRC_SOURCE_LIST ${SRC_PATH}/*.cpp)

SET(SRC_LIST ${SRC_HEADER_LIST} ${SRC_SOURCE_LIST})

SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin")
add_executable(main ${SRC_LIST})